--- a/source/_posts/健身笔记.md
+++ b/source/_posts/健身笔记.md
@@ -7,5 +7,55 @@ category: 健身笔记
 
 
 本文是硬派健身笔记汇总
+<!-- more -->
 
+训练计划
 
+1 臀腿 大
+3 肩 小
+4 背 中
+6 胸 大
+
+1 臀腿 小
+3 肩 中
+5 背 大
+6 胸 小
+
+小 %85
+中 %90
+大 %100
+
+（大训练量=100%max重量、中训练量=90%max、小训练量=85%max）
+
+肩
+男性肩部重点：前束&中束
+整体：推举&整体训练要点（中等重量、多次数、多组数、力竭）
+
+后束：俯身侧平举&练肩不粗脖小技巧（内旋）
+
+中束：侧平举&侧平举训练要点（小重量、手臂微屈）
+
+前束：前平举&前平举训练要点（多次数、多组数、力竭训练）
+
+肩部训练计划
+哑铃平举
+
+站姿
+俯身侧
+站姿侧
+前
+L侧
+
+屈膝卷腹
+反向卷腹
+空中单车
+开合跳
+自重侧弓步
+原地高抬腿
+靠墙静坐
+平板支撑
+
+最佳
+上腹肌 悬腿卷腹
+下腹肌 垂悬举腿
+整体 空中单车
